--- a/html/Chinhsachbaomat.html
+++ b/html/Chinhsachbaomat.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/abct.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>VỀ CHÚNG TÔI</title>
+    <title>CHÍNH SÁCH BẢO MẬT</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -158,18 +158,30 @@
             </div>
         </div>
     </div>
-    <h1 class="namePage">VỀ CHÚNG TÔI</h1>
+    <h1 class="namePage">CHÍNH SÁCH BẢO MẬT</h1>
     <div class="container">
         <div class="about-section">
-            <h2>Giới thiệu</h2>
-            <p>Juliana Studio Việt Nam, thành lập năm 2024, là điểm đến hàng đầu dành cho cộng đồng nhiếp ảnh tại Việt Nam. Chúng tôi cung cấp các dòng máy ảnh kỹ thuật số cao cấp và phụ kiện chính hãng từ các thương hiệu nổi tiếng như Canon, Sony, và Fujifilm. Với mong muốn đem lại trải nghiệm vượt trội, Juliana Studio không chỉ dừng lại ở việc cung cấp sản phẩm chất lượng mà còn chú trọng đến từng chi tiết trong dịch vụ tư vấn, chăm sóc khách hàng và chính sách hậu mãi.</p>
-            <p>Điểm khác biệt của Juliana Studio là cam kết đồng hành cùng khách hàng trên mọi hành trình sáng tạo, từ những bước đầu tiếp cận với nhiếp ảnh đến quá trình phát triển kỹ năng chuyên nghiệp. Chúng tôi liên tục tổ chức các sự kiện chia sẻ, khóa học hướng dẫn kỹ thuật, và hội thảo nhiếp ảnh nhằm giúp khách hàng nâng cao kỹ năng và cập nhật xu hướng mới nhất. Đội ngũ nhân viên nhiệt tình và giàu kinh nghiệm của chúng tôi sẵn sàng tư vấn giải pháp nhiếp ảnh tốt nhất, mang đến sự hài lòng tối đa cho khách hàng.</p>
-            <p> Không chỉ dừng lại ở kinh doanh, Juliana Studio mong muốn tạo dựng một cộng đồng nhiếp ảnh gắn kết, nơi mọi người có thể chia sẻ đam mê, học hỏi và truyền cảm hứng cho nhau. Bằng tâm huyết và sự chuyên nghiệp, chúng tôi tin tưởng Juliana Studio sẽ trở thành lựa chọn đầu tiên của người yêu nhiếp ảnh tại Việt Nam, là nơi khởi nguồn những câu chuyện hình ảnh đẹp và bền vững.</p>
-            <img src="../img/tầm nhìn.JPG" alt="Our Story" class="about-image">
-            <h2>Sứ Mệnh</h2>
-            <p>Juliana Studio cam kết cung cấp các dòng máy ảnh kỹ thuật số chính hãng từ các thương hiệu hàng đầu thế giới như Canon, Sony, và Fujifilm. Đa dạng về sản phẩm, công ty đáp ứng mọi nhu cầu từ người mới bắt đầu, đam mê nhiếp ảnh, đến các nhiếp ảnh gia chuyên nghiệp, đảm bảo rằng mỗi khách hàng đều có thể tìm thấy thiết bị phù hợp nhất với mình.</p>
-            <p>Juliana Studio cam kết theo đuổi các chính sách kinh doanh thân thiện với môi trường, từ việc lựa chọn đối tác có quy trình sản xuất bền vững đến sử dụng bao bì có thể tái chế. Công ty mong muốn góp phần bảo vệ môi trường, giảm thiểu tác động của rác thải điện tử và nâng cao nhận thức về việc sử dụng các sản phẩm nhiếp ảnh có trách nhiệm.</p>   
-            <img src="../img/sứ mệnh.jpeg" alt="Our Mission" class="about-image">
+            <h2>Chi tiết</h2>
+            <p>Cam kết bảo vệ thông tin cá nhân của khách hàng và duy trì sự riêng tư trong suốt quá trình giao dịch và sử dụng dịch vụ tại website của chúng tôi. Juliana Studio hiểu rõ rằng thông tin cá nhân của khách hàng là rất quan trọng và luôn nỗ lực hết mình để đảm bảo sự an toàn tuyệt đối cho những dữ liệu mà bạn cung cấp. Dưới đây là chi tiết chính sách bảo mật của chúng tôi:</p>
+            <p>Juliana Studio thu thập thông tin cá nhân của khách hàng với mục đích:
+
+                Cung cấp dịch vụ và sản phẩm tốt nhất cho khách hàng.
+                Xử lý đơn hàng, giao hàng và chăm sóc khách hàng.
+                Cải thiện chất lượng dịch vụ, sản phẩm và trải nghiệm người dùng.
+                Gửi thông tin khuyến mãi, tin tức và các chương trình ưu đãi từ Juliana Studio (nếu khách hàng đồng ý).
+                Các thông tin chúng tôi thu thập có thể bao gồm:
+                
+                Tên, địa chỉ, số điện thoại, email
+                Thông tin thanh toán (nếu có)
+                Thông tin liên quan đến hoạt động mua sắm và giao dịch trên website</p>
+            <p>Thông tin cá nhân của khách hàng được thu thập thông qua:
+
+                Mẫu đăng ký tài khoản
+                Đơn đặt hàng và giao dịch trực tuyến
+                Các cuộc khảo sát, cuộc thi hoặc chương trình khuyến mãi mà khách hàng tham gia</p>
+            <p>Juliana Studio cam kết bảo mật tất cả thông tin cá nhân của khách hàng và chỉ sử dụng chúng cho mục đích đã được thông báo trước đó. Chúng tôi không chia sẻ, bán hay chuyển nhượng thông tin cá nhân của khách hàng cho bên thứ ba, trừ khi có yêu cầu của cơ quan pháp luật hoặc để hoàn thành nghĩa vụ hợp pháp.</p>
+            <p>Khách hàng có quyền yêu cầu xem, chỉnh sửa hoặc xóa thông tin cá nhân mà Juliana Studio đang lưu trữ. Bạn có thể yêu cầu cập nhật hoặc xóa thông tin của mình bằng cách liên hệ trực tiếp với chúng tôi qua các kênh hỗ trợ khách hàng như email hoặc hotline.</p>   
+            <img src="../img/Chính sách bảo mật.jpg" alt="Our Mission" class="about-image">
         </div>
     </div>
 
@@ -214,8 +226,8 @@
             <p><b>Hỗ trợ khách hàng</b></p>
             <ul>
                 <li><a href="../html/pay.html">Phương thức thanh toán</a></li>
-                <li>Vận chuyển và giao hàng</a></li>
-                <li>Hướng dẫn mua trả góp</a></li>
+                <li>Vận chuyển và giao hàng</li>
+                <li>Hướng dẫn mua trả góp</li>
             </ul>
         </div>
     </div>
