--- a/html/login.html
+++ b/html/login.html
@@ -19,14 +19,14 @@
                 <span id="errEmail"></span>
                 <input type="password" placeholder="Password" id="Password1" />
                 <span id="errPas"></span>
-                <button id="btn-signup">Đăng kí</button>
+                <button id="btn-signup">Đăng ký</button>
             </form>
         </div>
         <div class="form-container sign-in-container">
             <form action="#" onsubmit="login()">
                 <h1>Đăng nhập</h1>
-                <input id="email" type="email" placeholder="Email" value="an@gmail.com" />
-                <input id="password" type="password" placeholder="Password" value="123456"/>
+                <input id="email" type="email" placeholder="Email" value="nguyenthithuyvi06092004@gmail.com" />
+                <input id="password" type="password" placeholder="Password" value="123456789"/>
                 <a href="#">Quên mật khẩu?</a>
                 <button id="btn-login">Đăng nhập</button>
             </form>
@@ -34,15 +34,15 @@
         <div class="overlay-container">
             <div class="overlay">
                 <div class="overlay-panel overlay-left">
-                    <h1>Hù !!</h1>
+                    <h1>Chào tình yêu !!!</h1>
                     <p>Bạn đã có tài khoản ?</p>
                     <button class="ghost" id="signIn">Đăng nhập</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <h1>Xin chào..</h1>
+                    <h1>Chào tình yêu !!!</h1>
                     
-                    <p>Bạn chưa có tài khoản?</p>
-                    <button class="ghost" id="signUp">Đăng kí</button>
+                    <p>Bạn chưa có tài khoản phải không?</p>
+                    <button class="ghost" id="signUp">Đăng ký</button>
                 </div>
             </div>
         </div>
