--- a/html/Chinhsachbaohanh.html
+++ b/html/Chinhsachbaohanh.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/abct.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>VỀ CHÚNG TÔI</title>
+    <title>CHÍNH SÁCH BẢO HÀNH</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -158,18 +158,16 @@
             </div>
         </div>
     </div>
-    <h1 class="namePage">VỀ CHÚNG TÔI</h1>
+    <h1 class="namePage">CHÍNH SÁCH BẢO HÀNH</h1>
     <div class="container">
         <div class="about-section">
-            <h2>Giới thiệu</h2>
-            <p>Juliana Studio Việt Nam, thành lập năm 2024, là điểm đến hàng đầu dành cho cộng đồng nhiếp ảnh tại Việt Nam. Chúng tôi cung cấp các dòng máy ảnh kỹ thuật số cao cấp và phụ kiện chính hãng từ các thương hiệu nổi tiếng như Canon, Sony, và Fujifilm. Với mong muốn đem lại trải nghiệm vượt trội, Juliana Studio không chỉ dừng lại ở việc cung cấp sản phẩm chất lượng mà còn chú trọng đến từng chi tiết trong dịch vụ tư vấn, chăm sóc khách hàng và chính sách hậu mãi.</p>
-            <p>Điểm khác biệt của Juliana Studio là cam kết đồng hành cùng khách hàng trên mọi hành trình sáng tạo, từ những bước đầu tiếp cận với nhiếp ảnh đến quá trình phát triển kỹ năng chuyên nghiệp. Chúng tôi liên tục tổ chức các sự kiện chia sẻ, khóa học hướng dẫn kỹ thuật, và hội thảo nhiếp ảnh nhằm giúp khách hàng nâng cao kỹ năng và cập nhật xu hướng mới nhất. Đội ngũ nhân viên nhiệt tình và giàu kinh nghiệm của chúng tôi sẵn sàng tư vấn giải pháp nhiếp ảnh tốt nhất, mang đến sự hài lòng tối đa cho khách hàng.</p>
-            <p> Không chỉ dừng lại ở kinh doanh, Juliana Studio mong muốn tạo dựng một cộng đồng nhiếp ảnh gắn kết, nơi mọi người có thể chia sẻ đam mê, học hỏi và truyền cảm hứng cho nhau. Bằng tâm huyết và sự chuyên nghiệp, chúng tôi tin tưởng Juliana Studio sẽ trở thành lựa chọn đầu tiên của người yêu nhiếp ảnh tại Việt Nam, là nơi khởi nguồn những câu chuyện hình ảnh đẹp và bền vững.</p>
-            <img src="../img/tầm nhìn.JPG" alt="Our Story" class="about-image">
-            <h2>Sứ Mệnh</h2>
-            <p>Juliana Studio cam kết cung cấp các dòng máy ảnh kỹ thuật số chính hãng từ các thương hiệu hàng đầu thế giới như Canon, Sony, và Fujifilm. Đa dạng về sản phẩm, công ty đáp ứng mọi nhu cầu từ người mới bắt đầu, đam mê nhiếp ảnh, đến các nhiếp ảnh gia chuyên nghiệp, đảm bảo rằng mỗi khách hàng đều có thể tìm thấy thiết bị phù hợp nhất với mình.</p>
-            <p>Juliana Studio cam kết theo đuổi các chính sách kinh doanh thân thiện với môi trường, từ việc lựa chọn đối tác có quy trình sản xuất bền vững đến sử dụng bao bì có thể tái chế. Công ty mong muốn góp phần bảo vệ môi trường, giảm thiểu tác động của rác thải điện tử và nâng cao nhận thức về việc sử dụng các sản phẩm nhiếp ảnh có trách nhiệm.</p>   
-            <img src="../img/sứ mệnh.jpeg" alt="Our Mission" class="about-image">
+            <h2>Chi tiết</h2>
+            <p>Được thiết kế nhằm đảm bảo quyền lợi tối đa cho khách hàng khi mua sắm tại cửa hàng. Chúng tôi cam kết cung cấp dịch vụ bảo hành chất lượng, giúp khách hàng yên tâm sử dụng các sản phẩm của Juliana Studio. Chính sách bảo hành áp dụng cho tất cả các sản phẩm được bán tại Juliana Studio, từ các thiết bị điện tử, máy ảnh, cho đến các sản phẩm phụ kiện, với thời gian bảo hành được quy định cụ thể cho từng loại sản phẩm.</p>
+            <p>Theo chính sách bảo hành, khách hàng sẽ được bảo hành miễn phí trong thời gian quy định nếu sản phẩm gặp phải lỗi do nhà sản xuất. Các lỗi bao gồm nhưng không giới hạn ở: lỗi phần cứng, lỗi kỹ thuật không do tác động từ bên ngoài. Trong trường hợp sản phẩm bị lỗi, khách hàng chỉ cần liên hệ với chúng tôi qua các kênh hỗ trợ trực tuyến hoặc trực tiếp tại các cửa hàng để được kiểm tra và xác định lỗi. Nếu sản phẩm đủ điều kiện bảo hành, chúng tôi sẽ tiến hành sửa chữa hoặc thay thế sản phẩm mới, tùy vào mức độ của lỗi.</p>
+            <p>Để đảm bảo quy trình bảo hành nhanh chóng và thuận tiện, khách hàng cần lưu giữ hóa đơn mua hàng và phiếu bảo hành kèm theo sản phẩm. Nếu sản phẩm bị hư hỏng do nguyên nhân bên ngoài như va đập, rơi vỡ, sử dụng sai cách hoặc tự ý sửa chữa, chúng tôi sẽ không áp dụng bảo hành miễn phí. Tuy nhiên, trong trường hợp này, Juliana Studio vẫn sẽ cung cấp dịch vụ sửa chữa có tính phí với chi phí hợp lý.</p>
+            <p>Bên cạnh đó, chúng tôi luôn cam kết hỗ trợ khách hàng một cách nhanh chóng và tận tâm nhất. Nếu có bất kỳ thắc mắc nào về quy trình bảo hành hoặc cần hỗ trợ, đội ngũ nhân viên của Juliana Studio sẽ sẵn sàng giải đáp và hỗ trợ quý khách trong suốt quá trình sử dụng sản phẩm.</p>
+            <p>Chính sách bảo hành của Juliana Studio nhằm mang đến sự an tâm và hài lòng cho khách hàng, với mong muốn xây dựng mối quan hệ lâu dài và bền vững với khách hàng thông qua việc cung cấp các sản phẩm chất lượng và dịch vụ chăm sóc sau bán hàng tốt nhất.</p>   
+            <img src="../img/chính sách bảo hành.jpg" alt="Our Mission" class="about-image">
         </div>
     </div>
 
@@ -214,8 +212,8 @@
             <p><b>Hỗ trợ khách hàng</b></p>
             <ul>
                 <li><a href="../html/pay.html">Phương thức thanh toán</a></li>
-                <li>Vận chuyển và giao hàng</a></li>
-                <li>Hướng dẫn mua trả góp</a></li>
+                <li>Vận chuyển và giao hàng</li>
+                <li>Hướng dẫn mua trả góp</li>
             </ul>
         </div>
     </div>
