--- a/html/chinhsachdoitra.html
+++ b/html/chinhsachdoitra.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/abct.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>VỀ CHÚNG TÔI</title>
+    <title>CHÍNH SÁCH ĐỔI TRẢ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -158,18 +158,22 @@
             </div>
         </div>
     </div>
-    <h1 class="namePage">VỀ CHÚNG TÔI</h1>
+    <h1 class="namePage">CHÍNH SÁCH ĐỔI TRẢ</h1>
     <div class="container">
         <div class="about-section">
-            <h2>Giới thiệu</h2>
-            <p>Juliana Studio Việt Nam, thành lập năm 2024, là điểm đến hàng đầu dành cho cộng đồng nhiếp ảnh tại Việt Nam. Chúng tôi cung cấp các dòng máy ảnh kỹ thuật số cao cấp và phụ kiện chính hãng từ các thương hiệu nổi tiếng như Canon, Sony, và Fujifilm. Với mong muốn đem lại trải nghiệm vượt trội, Juliana Studio không chỉ dừng lại ở việc cung cấp sản phẩm chất lượng mà còn chú trọng đến từng chi tiết trong dịch vụ tư vấn, chăm sóc khách hàng và chính sách hậu mãi.</p>
-            <p>Điểm khác biệt của Juliana Studio là cam kết đồng hành cùng khách hàng trên mọi hành trình sáng tạo, từ những bước đầu tiếp cận với nhiếp ảnh đến quá trình phát triển kỹ năng chuyên nghiệp. Chúng tôi liên tục tổ chức các sự kiện chia sẻ, khóa học hướng dẫn kỹ thuật, và hội thảo nhiếp ảnh nhằm giúp khách hàng nâng cao kỹ năng và cập nhật xu hướng mới nhất. Đội ngũ nhân viên nhiệt tình và giàu kinh nghiệm của chúng tôi sẵn sàng tư vấn giải pháp nhiếp ảnh tốt nhất, mang đến sự hài lòng tối đa cho khách hàng.</p>
-            <p> Không chỉ dừng lại ở kinh doanh, Juliana Studio mong muốn tạo dựng một cộng đồng nhiếp ảnh gắn kết, nơi mọi người có thể chia sẻ đam mê, học hỏi và truyền cảm hứng cho nhau. Bằng tâm huyết và sự chuyên nghiệp, chúng tôi tin tưởng Juliana Studio sẽ trở thành lựa chọn đầu tiên của người yêu nhiếp ảnh tại Việt Nam, là nơi khởi nguồn những câu chuyện hình ảnh đẹp và bền vững.</p>
-            <img src="../img/tầm nhìn.JPG" alt="Our Story" class="about-image">
-            <h2>Sứ Mệnh</h2>
-            <p>Juliana Studio cam kết cung cấp các dòng máy ảnh kỹ thuật số chính hãng từ các thương hiệu hàng đầu thế giới như Canon, Sony, và Fujifilm. Đa dạng về sản phẩm, công ty đáp ứng mọi nhu cầu từ người mới bắt đầu, đam mê nhiếp ảnh, đến các nhiếp ảnh gia chuyên nghiệp, đảm bảo rằng mỗi khách hàng đều có thể tìm thấy thiết bị phù hợp nhất với mình.</p>
-            <p>Juliana Studio cam kết theo đuổi các chính sách kinh doanh thân thiện với môi trường, từ việc lựa chọn đối tác có quy trình sản xuất bền vững đến sử dụng bao bì có thể tái chế. Công ty mong muốn góp phần bảo vệ môi trường, giảm thiểu tác động của rác thải điện tử và nâng cao nhận thức về việc sử dụng các sản phẩm nhiếp ảnh có trách nhiệm.</p>   
-            <img src="../img/sứ mệnh.jpeg" alt="Our Mission" class="about-image">
+            <h2>Chi tiết</h2>
+            <p>Được xây dựng để đảm bảo quyền lợi cho khách hàng và mang lại sự hài lòng tối đa khi mua sắm. Chúng tôi cam kết cung cấp chính sách đổi trả linh hoạt, minh bạch, và công bằng, giúp khách hàng có thể yên tâm về quyết định mua sắm của mình. Dưới đây là các điều khoản và điều kiện chính trong chính sách đổi trả của chúng tôi:</p>
+            <p>Điều kiện đổi trả sản phẩm:
+
+                Sản phẩm bị lỗi từ nhà sản xuất: Nếu sản phẩm bạn mua bị lỗi kỹ thuật hoặc hư hỏng do nhà sản xuất trong vòng 7 ngày kể từ ngày nhận hàng, bạn có thể đổi trả sản phẩm mà không mất phí. Sản phẩm sẽ được thay thế hoặc hoàn tiền tùy thuộc vào tình trạng của sản phẩm và yêu cầu của khách hàng.</p>
+            <p>Sản phẩm không đúng như mô tả: Trong trường hợp bạn nhận sản phẩm không giống mô tả trên website hoặc sản phẩm bị sai mẫu mã, sai màu sắc, sai kích thước, bạn có thể yêu cầu đổi trả trong vòng 7 ngày kể từ ngày nhận hàng.</p>
+            <p>Sản phẩm còn nguyên vẹn, chưa sử dụng: Để đủ điều kiện đổi trả, sản phẩm phải còn nguyên tem, nhãn mác, bao bì và không bị sử dụng hoặc thay đổi trạng thái ban đầu. Sản phẩm phải không có dấu hiệu bị hư hỏng do sử dụng sai cách hoặc tác động bên ngoài.</p>
+            <p>Điều kiện không được đổi trả:
+
+                Sản phẩm đã bị sử dụng, thay đổi, hoặc có dấu hiệu hư hỏng do lỗi của khách hàng.
+                Các sản phẩm khuyến mãi, giảm giá, sản phẩm đã được mở hộp hoặc sản phẩm có tem niêm phong bị mất hoặc bị rách.
+                Các sản phẩm thuộc nhóm hàng tiêu dùng, dễ hư hỏng, hoặc sản phẩm không thể đổi trả vì lý do vệ sinh (như đồ trang sức, mỹ phẩm, phụ kiện…).</p>   
+            <img src="../img/chính sách đổi trả.jpg" alt="Our Mission" class="about-image">
         </div>
     </div>
 
@@ -206,7 +210,7 @@
             <p><b>Các chính sách</b></p>
             <ul>
                 <li><a href="../html/Chinhsachbaohanh.html">Chính sách bảo hành</a></li>
-                <li><a href="../html/Chinhsachdoitra.html">Chính sách đổi trả</a></li>
+                <li><a href="../html/chinhsachdoitra.html">Chính sách đổi trả</a></li>
                 <li><a href="../html/Chinhsachbaomat.html">Chính sách bảo mật</a></li>
             </ul>
         </div>
@@ -214,8 +218,8 @@
             <p><b>Hỗ trợ khách hàng</b></p>
             <ul>
                 <li><a href="../html/pay.html">Phương thức thanh toán</a></li>
-                <li>Vận chuyển và giao hàng</a></li>
-                <li>Hướng dẫn mua trả góp</a></li>
+                <li>Vận chuyển và giao hàng</li>
+                <li>Hướng dẫn mua trả góp</li>
             </ul>
         </div>
     </div>
