--- a/html/pay.html
+++ b/html/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pay</title>
+    <title>THANH TOÁN</title>
     <link rel="stylesheet" href="../css/pay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -11,15 +11,15 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="../image/logo.png" alt="">
+            <img src="../img/logo.png" alt="">
         </div>
         <div class="menu">
-            <li><a href="../index.html">home</a></li>
+            <li><a href="../index.html">TRANG CHỦ</a></li>
         </div>
         <div class="icon">
                 <div class="signOut">
                     <a href="../html/productList.html">
-                        Back to shop
+                       QUAY LẠI
                     </a>
                 </div>
         </div>
@@ -27,10 +27,10 @@
     <div class="pay">
         <div class="r1">
             <div class="c1">
-                List product
+                SẢN PHẨM
             </div>
             <div >
-                Price
+                GIÁ
             </div >
         </div> 
         <div class="listCart">
@@ -38,15 +38,16 @@
         </div>  
         <div class="r3">
             <div>
-                Total price
+                TỔNG TIỀN     
             </div>
             <div class="sum">
                 
             </div>
         </div>  
          <div class="r4">
-            <button onclick="checkOut()">CheckOut</button>
+            <button onclick="checkOut()">THANH TOÁN</button>
          </div> 
+         
     </div>
 </body>
 
