--- a/html/productList.html
+++ b/html/productList.html
@@ -374,7 +374,7 @@
             <p><b>Các chính sách</b></p>
             <ul>
                 <li><a href="../html/Chinhsachbaohanh.html">Chính sách bảo hành</a></li>
-                <li><a href="../html/Chinhsachdoitra.html">Chính sách đổi trả</a></li>
+                <li><a href="../html/Chinhsachdoitra.html">chính sách đổi trả</a></li>
                 <li><a href="../html/Chinhsachbaomat.html">Chính sách bảo mật</a></li>
             </ul>
         </div>
