--- a/html/Chinhsach.html
+++ b/html/Chinhsach.html
@@ -284,9 +284,9 @@
             <li class="dropdown">
                 <a href="#" class="dropbtn">CHÍNH SÁCH<i class="fas fa-caret-down"></i></a>
                 <ul class="dropdown-content">
-                    <li><a href="../html/Chinhsachbaohanh.html">Chính sách bảo hành</a></li>
-                    <li><a href="../html/Chinhsachdoitra.html">Chính sách đổi trả</a></li>
-                    <li><a href="../html/Chinhsachbaomat.html">Chính sách bảo mật</a></li>
+                    <li><a href="./html/Chinhsachbaohanh.html">Chính sách bảo hành</a></li>
+                    <li><a href="./html/Chinhsachdoitra.html">Chính sách đổi trả</a></li>
+                    <li><a href="./html/Chinhsachbaomat.html">Chính sách bảo mật</a></li>
                 </ul>
         </ul>
         <div class="icon">
