--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="./html/contact.html">LIÊN HÊ</a></li>
             <li><a href="./html/about.html">VỀ CHÚNG TÔI</a></li>
             <li><a href="./html/pay.html">GIỎ HÀNG</a></li>
-            <li><a href="./html/CChinhsach.html">CHÍNH SÁCH</a></li>
+            <li><a href="./html/Chinhsach.html">CHÍNH SÁCH</a></li>
         </div>
         <div class="icon">
                 <div class="signOut">
