--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
         <div class="menu">
             <li><a href="#top">Trang chủ</a></li>
-            <li><a href="./html/productList.html">SẢN PHẨM</a></li>
-            <li><a href="./html/contact.html">LIÊN HÊ</a></li>
-            <li><a href="./html/about.html">VỀ CHÚNG TÔI</a></li>
-            <li><a href="./html/pay.html">GIỎ HÀNG</a></li>
-            <li><a href="./html/Chinhsach.html">CHÍNH SÁCH</a></li>
+            <li><a href="../html/productList.html">SẢN PHẨM</a></li>
+            <li><a href="../html/contact.html">LIÊN HÊ</a></li>
+            <li><a href="../html/about.html">VỀ CHÚNG TÔI</a></li>
+            <li><a href="../html/pay.html">GIỎ HÀNG</a></li>
+            <li><a href="../html/chinhsach.html">CHÍNH SÁCH</a></li>
         </div>
         <div class="icon">
                 <div class="signOut">
