--- a/html/chinhsach.html
+++ b/html/chinhsach.html
@@ -28,259 +28,7 @@
             align-items: center;
             justify-content: space-around;
             text-transform: uppercase ;
-            background-color: #070707;
-            color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            top: 0;
-            z-index: 10;
-        }
-        .header a {
-            display: block;
-            color: white;
-            padding: 15.5px 15px;
-            text-decoration: none; 
-        }
-
-        .logo{
-            overflow: hidden;
-            height: 100%;
-            width: 80px;
-            display: flex;
-            justify-content: center;
-        }
-        .logo img{
-            position: relative;
-            top: -15px;
-            height: 100px;
-        }
-        .icon{
-            display: flex;
-            padding: 10px 15px;
-            align-items: center;
-        }
-        .signOut a{
-            height: 100%;
-            width: fit-content;
-            display: flex;
-            justify-content: center;
-            color: white;
-        }
-        .signOut a:hover{
-            opacity: 0.8;
-            transform: scale(0.9);
-        }
-
-        .menu {
-            display: flex;
-            list-style: none;
-        }
-
-        .menu{
-            display: flex;
-        }
-        .menu li{
-            position: relative;
-            display: inline-block;
-            justify-content: center;
-            align-items: center;  
-        }
-        .menu li a::after{
-            content: '';
-            height: 5px;
-            width: 0;
-            background: white;
-            position: absolute;
-            left: 0;
-            bottom: 3px;
-            transition: 0.5s;
-        }
-        .menu li a:hover::after{
-            width: 100%;
-            transition: all 0.8s;
-        }
-        .header a{
-            display: block;
-            color: white;
-            padding: 15.5px 15px;
-        }
-
-        /* Dropdown menu */
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #444;
-            min-width: 180px;
-            top: 45px;
-            border-radius: 5px;
-            padding: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-content li a {
-            color: white;
-            padding: 8px 15px;
-            display: block;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .dropdown-content li a:hover {
-            background-color: #666;
-            padding-left: 25px;
-        }
-
-        /* Main Content */
-        .main-content {
-            max-width: 800px;
-            margin: 100px auto 0;
-            padding: 20px;
-        }
-
-        .blog-title {
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .blog-post {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 30px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .blog-post:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .blog-post h2 {
-            font-size: 24px;
-            color: #85210d;
-        }
-
-        .blog-post p {
-            font-size: 16px;
-            color: #555;
-            margin-top: 10px;
-            line-height: 1.6;
-        }
-
-        .blog-post img {
-            width: 100%; 
-            max-width: 800px; 
-            height: auto; 
-            border-radius: 8px; 
-            margin-bottom: 15px; 
-        }
-
-        .blog-post a.read-more {
-            display: inline-block;
-            margin-top: 15px;
-            color: #85210d;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .blog-post a.read-more:hover {
-            text-decoration: underline;
-        }
-
-        /* Footer */
-        .footer {
-            background-color: #000000;
-            padding: 40px 20px;
-            text-align: center;
-            color: #f8f4f4;
-        }
-        .footer-content {
-            display: flex;
-            justify-content: center; /* Center the footer content */
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .subscribe {
-            max-width: 300px;
-            text-align: center; /* Center the text */
-            margin: 20px;
-        }
-        .subscribe h4 {
-            margin-bottom: 10px;
-        }
-        .search {
-            display: flex;
-            justify-content: center; /* Center the search input */
-        }
-        .search input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px 0 0 4px;
-        }
-        .subscribe-btn {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 0 4px 4px 0;
-            cursor: pointer;
-        }
-        .subscribe-btn:hover {
-            background-color: #0056b3;
-        }
-        .footer-links {
-            display: flex;
-            justify-content: center; /* Center the footer links */
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .list_link ul {
-            list-style: none;
-            padding: 0;
-        }
-        .social-media {
-            text-align: center;
-        }
-        .icon_link a {
-            margin: 0 10px;
-            font-size: 1.5rem;
-            text-decoration: none;
-        }
-        .footer-bottom {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .footer-bottom select {
-            padding: 8px;
-            border-radius: 4px;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Header -->
-    <div class="header">
-        <div class="logo">
-            <img src="../img/logo.png" alt="Logo">
-        </div><ul class="menu">
-            <li><a href="../index.html">TRANG CHỦ</a></li>
-            <li><a href="../html/productList.html">SẢN PHẨM</a></li>
-            <li><a href="../html/contact.html">LIÊN HỆ</a></li>
-            <li><a href="../html/about.html">VỀ CHÚNG TÔI</a></li>
+            background-coHÀNG</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">CHÍNH SÁCH<i class="fas fa-caret-down"></i></a>
                 <ul class="dropdown-content">
