--- a/html/chinhsach.html
+++ b/html/chinhsach.html
@@ -277,11 +277,11 @@
         <div class="logo">
             <img src="../img/logo.png" alt="Logo">
         </div><ul class="menu">
-            <li><a href="./index.html">TRANG CHỦ</a></li>
-            <li><a href="./html/productList.html">SẢN PHẨM</a></li>
-            <li><a href="./html/contact.html">LIÊN HỆ</a></li>
-            <li><a href="./html/about.html">VỀ CHÚNG TÔI</a></li>
-            <li><a href="./html/pay.html">GIỎ HÀNG</a></li>
+            <li><a href="../index.html">TRANG CHỦ</a></li>
+            <li><a href="../html/productList.html">SẢN PHẨM</a></li>
+            <li><a href="../html/contact.html">LIÊN HỆ</a></li>
+            <li><a href="../html/about.html">VỀ CHÚNG TÔI</a></li>
+            <li><a href="../html/pay.html">GIỎ HÀNG</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">CHÍNH SÁCH<i class="fas fa-caret-down"></i></a>
                 <ul class="dropdown-content">
