--- a/html/chinhsach.html
+++ b/html/chinhsach.html
@@ -306,7 +306,7 @@
             </li>
             <h2>Chính sách bảo hành</h2>
             <p>Được thiết kế nhằm đảm bảo quyền lợi tối đa cho khách hàng khi mua sắm tại cửa hàng. Chúng tôi cam kết cung cấp dịch vụ bảo hành chất lượng, giúp khách hàng yên tâm sử dụng các sản phẩm của Juliana Studio...</p>
-            <a href="../html/chinhsachbaohanh.html" class="read-more">Đọc tiếp</a>
+            <a href="../html/Chinhsachbaohanh.html" class="read-more">Đọc tiếp</a>
         </div>
         <div class="blog-post">
             <li>
