--- a/html/productList.html
+++ b/html/productList.html
@@ -344,7 +344,7 @@
     <div class="footer">
         <div class="footer-content">
             <div class="logo_end">
-                <img src="../img/logo.png" alt="" style="max-width: 150px">
+                <img src="../img/Logo.png" alt="" style="max-width: 150px">
             </div>
             <div class="subscribe">
                 
